fixed initial error

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </p>
           <button class="btn-primary">Download CV</button>
         </div>
-        <img src="images/hardy.png" alt="hardy" />
+        <img src="images/hardy.png" alt="" />
       </div>
       <main>
         <section class="about">
@@ -66,6 +66,32 @@
             </div>
           </div>
           </div>
+        </section>
+        <!-- what i do section -->
+        <section class="waht-i-do">
+            <h3 class="section-tittle">What I Do</h3>
+            <div class="skills-container">
+                <div class="skills">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-tittle">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta explicabo, sit molestias exercitationem earum ducimus.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-tittle">React</p>
+                    <p class="skill-description">Pariatur quis dolore harum sint facilis magnam ipsam et. Aspernatur veritatis omnis quasi dignissimos facere!</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-tittle">Node.js</p>
+                    <p class="skill-description">Quas veritatis necessitatibus exercitationem non possimus corrupti cumque porro, eos, quaerat provident minus facere quibusdam!</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-tittle">MongoDB</p>
+                    <p class="skill-description">Expedita ex quidem ut corrupti enim, harum, aspernatur animi eum minus delectus facere? Officia, velit?</p>
+                </div>
+            </div>
         </section>
       </main>
     </header>
