--- a/index.html
+++ b/index.html
@@ -49,49 +49,148 @@
           </p>
           <div class="about-info-container">
             <div class="about-info">
-                <p class="info-tittle">Name</p>
-                <p class="info-description">Mary Hardy</p>
+              <p class="info-tittle">Name</p>
+              <p class="info-description">Mary Hardy</p>
             </div>
             <div class="about-info">
-                <p class="info-tittle">Email:</p>
-                <p class="info-description">info@gmail.com</p>
+              <p class="info-tittle">Email:</p>
+              <p class="info-description">info@gmail.com</p>
             </div>
             <div class="about-info">
-                <p class="info-tittle">Date of birth:</p>
-                <p class="info-description">11 November 1987</p>
+              <p class="info-tittle">Date of birth:</p>
+              <p class="info-description">11 November 1987</p>
             </div>
             <div class="about-info">
-                <p class="info-tittle">Location</p>
-                <p class="info-description">Los Angeles, USA</p>
+              <p class="info-tittle">Location</p>
+              <p class="info-description">Los Angeles, USA</p>
             </div>
-          </div>
           </div>
         </section>
         <!-- what i do section -->
         <section class="waht-i-do">
-            <h3 class="section-tittle">What I Do</h3>
-            <div class="skills-container">
-                <div class="skills">
-                    <img src="images/icons/js.png" alt="">
-                    <p class="skill-tittle">Vanilla JavaScript</p>
-                    <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta explicabo, sit molestias exercitationem earum ducimus.</p>
-                </div>
-                <div class="skills">
-                    <img src="images/icons/react.png" alt="">
-                    <p class="skill-tittle">React</p>
-                    <p class="skill-description">Pariatur quis dolore harum sint facilis magnam ipsam et. Aspernatur veritatis omnis quasi dignissimos facere!</p>
-                </div>
-                <div class="skills">
-                    <img src="images/icons/nodejs.png" alt="">
-                    <p class="skill-tittle">Node.js</p>
-                    <p class="skill-description">Quas veritatis necessitatibus exercitationem non possimus corrupti cumque porro, eos, quaerat provident minus facere quibusdam!</p>
-                </div>
-                <div class="skills">
-                    <img src="images/icons/mongo.png" alt="">
-                    <p class="skill-tittle">MongoDB</p>
-                    <p class="skill-description">Expedita ex quidem ut corrupti enim, harum, aspernatur animi eum minus delectus facere? Officia, velit?</p>
-                </div>
+          <h3 class="section-tittle">What I Do</h3>
+          <div class="skills-container">
+            <div class="skills">
+              <img src="images/icons/js.png" alt="" />
+              <p class="skills-tittle">Vanilla JavaScript</p>
+              <p class="skill-description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta
+                explicabo, sit molestias exercitationem earum ducimus.
+              </p>
             </div>
+            <div class="skills">
+              <img src="images/icons/react.png" alt="" />
+              <p class="skills-tittle">React</p>
+              <p class="skill-description">
+                Pariatur quis dolore harum sint facilis magnam ipsam et.
+                Aspernatur veritatis omnis quasi dignissimos facere!
+              </p>
+            </div>
+            <div class="skills">
+              <img src="images/icons/nodejs.png" alt="" />
+              <p class="skills-tittle">Node.js</p>
+              <p class="skill-description">
+                Quas veritatis necessitatibus exercitationem non possimus
+                corrupti cumque porro, eos, quaerat provident minus facere
+                quibusdam!
+              </p>
+            </div>
+            <div class="skills">
+              <img src="images/icons/mongo.png" alt="" />
+              <p class="skills-tittle">MongoDB</p>
+              <p class="skill-description">
+                Expedita ex quidem ut corrupti enim, harum, aspernatur animi eum
+                minus delectus facere? Officia, velit?
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <!-- Resume section -->
+
+        <section class="resume">
+          <h3 class="section-tittle">A summary of My Resume</h3>
+          <div class="resume-content">
+            <div>
+              <h3 class="resume-tittle">My Education</h3>
+              <div class="resume-item">
+                <h4 class="resume-tittle">Master in Computer Engineering</h4>
+                <h5 class="resume-sub-tittle">
+                  Harvard University / 2015-2017
+                </h5>
+                <p class="resume-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+              </div>
+              <hr />
+              <div class="resume-item">
+                <h4 class="resume-tittle">Master in Computer Engineering</h4>
+                <h5 class="resume-sub-tittle">
+                  Harvard University / 2015-2017
+                </h5>
+                <p class="resume-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+              </div>
+              <hr />
+              <div class="resume-item">
+                <h4 class="resume-tittle">Master in Computer Engineering</h4>
+                <h5 class="resume-sub-tittle">
+                  Harvard University / 2015-2017
+                </h5>
+                <p class="resume-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+              </div>
+            </div>
+            <div>
+              <h3 class="resume-tittle">My Experience</h3>
+              <div class="resume-item">
+                <h4 class="resume-tittle">Master in Computer Engineering</h4>
+                <h5 class="resume-sub-tittle">
+                  Harvard University / 2015-2017
+                </h5>
+                <p class="resume-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+              </div>
+              <hr />
+              <div class="resume-item">
+                <h4 class="resume-tittle">Master in Computer Engineering</h4>
+                <h5 class="resume-sub-tittle">
+                  Harvard University / 2015-2017
+                </h5>
+                <p class="resume-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+              </div>
+              <hr />
+              <div class="resume-item">
+                <h4 class="resume-tittle">Master in Computer Engineering</h4>
+                <h5 class="resume-sub-tittle">
+                  Harvard University / 2015-2017
+                </h5>
+                <p class="resume-description">
+                  List skill/technologies here. You can change the icon above to
+                  any of the 1500+ FontAwesome 5 free icons available. Aenean
+                  commodo ligula eget dolor.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="resume-button">
+            <button class="btn-primary">Download CV</button>
+          </div>
         </section>
       </main>
     </header>
