--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
             <button class="btn-primary">Download CV</button>
           </div>
         </section>
-        <!-- Contract Section -->
+        <!-- contact Section -->
 
-        <section class="contract">
+        <section class="contact">
           <div>
             <h3 class="section-tittle">Let's Connect</h3>
             <p class="section-description">
